Fix spacing issues with the homepage image

--- a/src/assets/scss/elements/images.scss
+++ b/src/assets/scss/elements/images.scss
@@ -4,6 +4,7 @@
 
   @media (min-width: $screen-sm) {
     max-width: 20rem;
+    margin-right: 1.5rem;
   }
 
   @media (min-width: $screen-md) {
