--- a/src/assets/scss/layouts/content.scss
+++ b/src/assets/scss/layouts/content.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex: 1 1 auto;
   justify-content: center;
-  margin: 2.1rem auto 0;
   padding-left: 1rem;
   padding-right: 1rem;
   position: relative;
